# memos-stremable-mcp-server

./: .dockerignore  .env.example  .env.memos.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/memos_mcp/: __init__.py  auth.py  cli.py  client.py  config.py  models.py  server.py
